--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/Gonlos/gordify-slak-bot#readme",
   "dependencies": {
+    "dotenv": "^6.0.0",
     "express": "^4.16.3"
   }
 }
