--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node bin/www",
-    "dev": "nodemon bin/www",
+    "dev": "DEBUG=project2:* nodemon bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,7 +22,9 @@
   },
   "homepage": "https://github.com/Gonlos/gordify-slak-bot#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "dotenv": "^6.0.0",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "localtunnel": "^1.9.1"
   }
 }
