--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^0.18.0",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
-    "localtunnel": "^1.9.1"
+    "localtunnel": "^1.9.1",
+    "mongoose": "^5.3.1"
   }
 }
