--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "localtunnel": "^1.9.1",
-    "mongoose": "^5.3.1"
+    "moment": "^2.22.2",
+    "mongoose": "^5.3.1",
+    "node-schedule": "^1.3.0"
   }
 }
